# app-tezos

./: Makefile
fuzzer/: CMakeLists.txt  fuzz_tx_parser.c  mocks.c  ui_fuzzer.c
fuzzer/corpus/: tx1.raw  tx2.raw
src/: boot.c  keys.c  transaction.h  ui_nano_s.c
src/swap/: handle_check_address.c  handle_get_printable_amount.c  handle_swap_sign_transaction.c
